fix spacing and filter logic

--- a/web/next/styles/_page_blog-feed.scss
+++ b/web/next/styles/_page_blog-feed.scss
@@ -2,12 +2,12 @@
 
 .blog-controls {
     position: sticky;
-    top: 0;
+    top: 3em;
     display: flex;
     flex-direction: column;
     background: linear-gradient(vars.$gray-A1, 98%, transparent);
     input {
-        margin-top: 5rem;
+        margin-top: 1rem;
         margin-bottom: 2rem;
     }
     .categories-filter {
